feat: enable IDE test discovery for @Scenario methods
Changes @Scenario annotation to use @Test for JUnit Platform discovery,
enabling play buttons to appear next to scenario methods in IntelliJ.

Key changes:
- Switch @Scenario from @TestTemplate to @Test annotation
- Implement step discovery during test discovery phase
- Register each step as individual test descriptor
- Add KBehaveStepDescriptor for step-level test execution
- Update KBehaveScenarioDescriptor to act as container
- Enhance test engine to discover and execute steps individually
- Add Bazel test configuration with JUnit Platform Console Launcher

Known limitations:
- Clicking play currently runs all tests (not just selected scenario)
- Steps don't yet appear as child test nodes in IDE

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -1,8 +1,9 @@
-load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")
+load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library", "kt_jvm_test")
 
 kt_jvm_library(
     name = "kbehave",
     srcs = glob(["src/main/kotlin/**/*.kt"]),
+    resources = glob(["src/main/resources/**/*"]),
     visibility = ["//visibility:public"],
     deps = [
         "@maven//:org_jetbrains_kotlin_kotlin_reflect",
@@ -12,4 +13,40 @@ kt_jvm_library(
         "@maven//:org_junit_jupiter_junit_jupiter_params",
         "@maven//:org_junit_platform_junit_platform_engine",
     ],
+)
+
+kt_jvm_library(
+  name = "tests-lib",
+  testonly = True,
+  srcs = glob([
+    "src/test/kotlin/**/*.kt"
+  ]),
+  resources = glob(
+    ["src/test/resources/**/*"],
+    allow_empty = True,
+  ),
+  visibility = ["//visibility:public"],
+  deps = [
+    ":kbehave",
+    "@maven//:org_jetbrains_kotlin_kotlin_test",
+    "@maven//:org_junit_jupiter_junit_jupiter_api",
+    "@maven//:org_junit_jupiter_junit_jupiter_engine",
+  ]
+)
+
+java_test(
+  name = "tests",
+  use_testrunner = False,
+  main_class = "org.junit.platform.console.ConsoleLauncher",
+  args = [
+    "--select-package=io.github.iamkoch.kbehave.examples",
+    "--details=tree",
+    "--fail-if-no-tests",
+  ],
+  runtime_deps = [
+      ":tests-lib",
+      "@maven//:org_junit_platform_junit_platform_launcher",
+      "@maven//:org_junit_platform_junit_platform_console",
+      "@maven//:org_junit_jupiter_junit_jupiter_engine",
+  ]
 )
