--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -22,18 +22,15 @@ jobs:
         distribution: 'temurin'
 
     - name: Setup Gradle
-      uses: gradle/gradle-build-action@v2
-
-    - name: Validate Gradle wrapper
-      uses: gradle/wrapper-validation-action@v1
+      uses: gradle/actions/setup-gradle@v4
 
     - name: Build
-      run: ./gradlew build
+      run: ./gradlew build --no-daemon
 
-    - name: Publish package
-      run: ./gradlew publishMavenPublicationToOSSRHRepository
+    - name: Publish to Central Portal staging
+      run: ./gradlew publishMavenPublicationToCentralPortalRepository --no-daemon
       env:
-        OSSRH_USERNAME: ${{ secrets.MAVEN_USERNAME }}
-        OSSRH_PASSWORD: ${{ secrets.MAVEN_PASSWORD }}
+        MAVEN_USERNAME: ${{ secrets.MAVEN_USERNAME }}
+        MAVEN_PASSWORD: ${{ secrets.MAVEN_PASSWORD }}
         SIGNING_KEY: ${{ secrets.GPG_PRIVATE_KEY }}
         SIGNING_PASSWORD: ${{ secrets.GPG_PASSPHRASE }}
